2007-05-09  Werner Koch  <wk@g10code.com>

	* libgcrypt.m4: Print found version on success.

2007-05-09  Marcus Brinkmann  <marcus@g10code.de>

	* gcrypt.h.in (gcry_ac_io_t): Add name for anonymous union, and mark
	all members as internal (actually: deprecated).

2007-05-04  Werner Koch  <wk@g10code.com>

	* Makefile.am (.rc.lo): New to replace gmake specific suffix rule.

2007-05-03  Werner Koch  <wk@g10code.com>

	* libgcrypt.def (gcry_sexp_nth_string): New.
	* Makefile.am (EXTRA_DIST): Add libgcrypt.def.

2007-05-02  Werner Koch  <wk@g10code.com>

	* global.c (print_config): Print ciphers, digests and pubkeys.

2007-05-02  David Shaw  <dshaw@jabberwocky.com>

	* cipher.h, gcrypt.h.in: Add Camellia.

2007-04-30  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRYCTL_PRINT_CONFIG): New.
	(GCRYCTL_SET_RNDEGD_SOCKET): New.
	* global.c (gcry_control): Add GCRYCTL_PRINT_CONFIG and
	GCRYCTL_SET_RNDEGD_SOCKET.
	(print_config): New.
	* misc.c (_gcry_log_info_with_dummy_fp): New.

2007-04-18  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (gcry_sexp_nth_string): New.

	* sexp.c (gcry_sexp_nth_data): Factored code out to ...
	(sexp_nth_data): ... new.
	(gcry_sexp_nth_string): New.
	(gcry_sexp_nth_mpi): Reimplemented in terms of sexp_ntd_data.

2007-04-16  Werner Koch  <wk@g10code.com>

	* secmem.c (init_pool): Use sysconf() if available to determine
	page size.
	
2007-03-22  Werner Koch  <wk@g10code.com>

	* mpi.h (mpi_mod): New.
	(mpi_new, mpi_snew): New.

	* gcrypt.h.in: Add GCRY_PK_ECDSA.

2007-03-16  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRY_THREAD_OPTION_PTHREAD_IMPL): Fixed typo
	introduced by me on 2006-10-23.

2007-02-22  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (gcry_ac_id_to_name, gcry_ac_name_to_id): Mark as
	deprecated.

	* libgcrypt.def (gcry_fast_random_poll): Removed - it is a macro.
	(gcry_cipher_register, gcry_cipher_unregister): New.
	(gcry_md_register, gcry_md_unregister): New.
	(gcry_pk_register, gcry_pk_unregister): New.